--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,13 @@
         <item name="colorAccent">@color/myPrimaryColor</item>
     </style>
 
+    <style name="SplashTheme" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="colorPrimary">@color/myPrimaryColor</item>
+        <item name="colorPrimaryDark">@color/myPrimaryColor</item>
+        <item name="colorAccent">@color/myPrimaryColor</item>
+        <item name="android:statusBarColor">@color/myPrimaryColor</item>
+    </style>
+
     <style name="Theme.GitHub" parent="Base.Theme.GitHub" />
 </resources>
